--- a/components/Navbar/GeneralLinks.module.css
+++ b/components/Navbar/GeneralLinks.module.css
@@ -1,6 +1,6 @@
-.control {
+a.control {
   display: block;
-  padding: var(--mantine-spacing-xs) var(--mantine-spacing-md);
+  padding: var(--mantine-spacing-xs) var(--mantine-spacing-sm);
   border-radius: var(--mantine-radius-md);
   font-weight: 500;
 
